fix contrast issues

--- a/components/atoms/Excerpt/Excerpt.module.css
+++ b/components/atoms/Excerpt/Excerpt.module.css
@@ -1,3 +1,3 @@
 .excerpt {
-  @apply text-gray-500;
+  @apply text-gray-300;
 }
