--- a/components/atoms/Meta/Meta.module.css
+++ b/components/atoms/Meta/Meta.module.css
@@ -1,3 +1,3 @@
 .meta {
-  @apply text-gray-500;
+  @apply text-gray-300;
 }
